fix wrong font propery (font-style: bold) to font weight: bold

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ a:visited{
   text-align: center;
   color: #011925;
   font-size: 1rem;
-  font-style: bold;
+  font-weight: bold;
 }
 
 .works_main {
